HelloUltraviolet/Fixtures/RejectedSource/Expressions/AsyncTypeDiagnosticsTable/Source/Main.uv
//! Rejected async type specimen for the Async type diagnostics table.

public procedure asyncTypeDiagnosticsTableReference() -> Async<i32> {
    return
}
